added testing environment

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           </div>
           <div>
             <h3>Featured title</h3>
+            <h4>Testing environment</h4>
             <p>
               Paragraph of text beneath the heading to explain the heading. Here
               is just a bit more text.
